<resources>
    <string name="About_RunnerUp">About RunnerUp</string>
    <string name="Accounts">Accounts</string>
    <string name="Activity_countdown">Activity countdown</string>
    <string name="Activity_ongoing">Activity ongoing</string>
    <string name="Activity_ready">Activity ready</string>
    <string name="Add_countdown_after_step_that_ends_with_user_press">Add countdown after step that ends with user press</string>
    <string name="Add_manual_entry">Add manual entry</string>
    <string name="Add_repeat">Add repeat</string>
    <string name="Add_step">Add step</string>
    <string name="Add_workout_notes">Add workout notes</string>
    <string name="Adjust_altitude">Adjust GPS altitude to geoid (EGM96)</string>
    <string name="Advanced">Advanced</string>
    <string name="Advanced_options">Advanced options</string>
    <string name="Age">Age</string>
    <string name="Android_text_to_speech_settings">Android text-to-speech settings</string>
    <string name="Are_you_sure">Are you sure?</string>
    <string name="Audio_cue_language">Audio cue language</string>
    <string name="Audio_cue_settings">Audio cue settings</string>
    <string name="Audio_cue_unit">Include unit in audio cue</string>
    <string name="Audio_cues">Audio cues</string>
    <string name="Auto_start_GPS">Autostart GPS</string>
    <string name="Autolap">Autolap</string>
    <string name="Autolap_during_intervals">Autolap during intervals</string>
    <string name="Autolap_m">Autolap (m)</string>
    <string name="Automatic_upload">Automatic upload</string>
    <string name="Autopause">Autopause</string>
    <string name="Autopause_after_s">Autopause after (s)</string>
    <string name="Autopause_min_pace_minkm">Autopause min pace (min/km)</string>
    <string name="Basic">Basic</string>
    <string name="Battery_level">Battery level</string>
    <string name="Cancel">Cancel</string>
    <string name="Cancellingplease_wait">Cancelling… please wait</string>
    <string name="Clear_HR_settings">Clear HR settings</string>
    <string name="Clear_all">Clear all</string>
    <string name="Clear_heart_rate_zone_settings">Clear heart rate zone settings</string>
    <string name="Clear_uploads">Clear uploads</string>
    <string name="Clear_uploads_from_phone">Clear uploads (from phone)</string>
    <string name="Coach_to_help_you_reach_target_if_having_set_target">Coach to help you reach target (if having set target)</string>
    <string name="Configure_accounts">Edit accounts</string>
    <string name="Configure_audio_cues">Configure audio cues</string>
    <string name="Configure_heart_rate_zones">Configure heart rate zones</string>
    <string name="Connect">Connect</string>
    <string name="Connecting">Connecting</string>
    <string name="Convert_rest_on_Advanced_tab">Convert rest on Advanced tab</string>
    <string name="Convert_rest_on_Interval_tab">Convert rest on Interval tab</string>
    <string name="Convert_reststep_with_type_distance_to_recoverystep_for_Advancedtab">On the Advanced tab, convert distance-based Rest steps to Recovery steps</string>
    <string name="Convert_reststep_with_type_distance_to_recoverystep_for_Intervaltab">On the Interval tab, convert distance-based Rest steps to Recovery steps</string>
    <string name="Countdown_time_s">Countdown time (s)</string>
    <string name="Create">Create</string>
    <string name="Create_new_audio_cue_scheme">Create new audio cue scheme</string>
    <string name="Create_new_workout">Create new workout</string>
    <string name="Cue_information">Cue information</string>
    <string name="Cue_interval_s">Cue interval (s)</string>
    <string name="Cue_intervall_m">Cue intervall (m)</string>
    <string name="Current">Current</string>
    <string name="Current_cadence">Current cadence</string>
    <string name="Current_heart_rate">Current heart rate</string>
    <string name="Current_heart_rate_zone">Current heart rate zone</string>
    <string name="Current_pace">Current pace</string>
    <string name="Current_speed">Current speed</string>
    <string name="Current_speed_from_GPS_points">Current speed from GPS points</string>
    <string name="Darn">Darn!</string>
    <string name="Date">Date</string>
    <string name="Default">Default</string>
    <string name="Delete">Delete</string>
    <string name="Delete_activity">Delete activity</string>
    <string name="Delete_workout">Delete workout</string>
    <string name="Device">Device</string>
    <string name="Discard">Discard</string>
    <string name="Discard_activity">Discard activity</string>
    <string name="Disconnect">Disconnect</string>
    <string name="Disconnect_account">Disconnect account</string>
    <string name="Dismiss">Dismiss</string>
    <string name="Distance">Distance</string>
    <string name="Distance_triggered_audio_cue">Distance triggered audio cue</string>
    <string name="Do_not_show_again">Do not show again</string>
    <string name="Download">Download</string>
    <string name="Download_workouts">Download workouts</string>
    <string name="Downloadeditremove_workouts">Download/edit/remove workouts</string>
    <string name="Downloading_1s_will_overwrite_2_workout_with_same_name">Downloading %1$s will overwrite %2$s workout with same name</string>
    <string name="Downloading_from_1s">Downloading from %1$s</string>
    <string name="Duration">Duration</string>
    <string name="Edit_activity">Edit activity</string>
    <string name="Edit_step">Edit step</string>
    <string name="Enable_GPS">Enable GPS</string>
    <string name="Enable_RunnerUpLive">Enable RunnerUp Live</string>
    <string name="End_of_lap_audio_cue">End of lap audio cue</string>
    <string name="Experimental_HRM_devices">Experimental HRM devices</string>
    <string name="Experimental_features">Experimental features</string>
    <string name="HRM_connection_audio_cue">HRM connection triggered audio cue</string>
    <string name="High_pace">High pace</string>
    <string name="Interval_distance">Interval distance</string>
    <string name="Interval_heart_rate">Interval heart rate</string>
    <string name="Interval_heart_rate_zone">Interval heart rate zone</string>
    <string name="Interval_pace">Interval pace</string>
    <string name="Interval_speed">Interval speed</string>
    <string name="Interval_time">Interval time</string>
    <string name="Interval_type">Interval type</string>
    <string name="Keep_silent_when_workout_startpauseresumestop">Silent start/pause/resume/stop of workouts</string>
    <string name="Lap_distance">Lap distance</string>
    <string name="Lap_heart_rate">Lap heart rate</string>
    <string name="Lap_heart_rate_zone">Lap heart rate zone</string>
    <string name="Lap_pace">Lap pace</string>
    <string name="Lap_speed">Lap speed</string>
    <string name="Lap_start">Lap start</string>
    <string name="Lap_time">Lap time</string>
    <string name="Low_pace">Low pace</string>
    <string name="Maximum_heart_rate_MHR">Maximum heart rate (MHR)</string>
    <string name="Misc_cues">Misc cues</string>
    <string name="Mute_music_during_audio_cues">Mute music during audio cues</string>
    <string name="Push">Press here</string>
    <string name="Repetitions">Repetitions</string>
    <string name="Rest_type">Rest type</string>
    <string name="Save">Save</string>
    <string name="Sex">Sex</string>
    <string name="Skip_event_audio_cues">Skip event audio cues</string>
    <string name="Sport">Sport</string>
    <string name="Start_hour">Start hour</string>
    <string name="Step_intensity">Step intensity</string>
    <string name="Target">Target</string>
    <string name="Target_coaching">Target coaching</string>
    <string name="Target_heart_rate_zone">Target heart rate zone</string>
    <string name="Target_pace_HHMMSS">Target pace</string>
    <string name="Test_audio_cue">Test audio cue</string>
    <string name="Time_triggered_audio_cue">Time triggered audio cue</string>
    <string name="Total_distance">Total distance</string>
    <string name="Total_heart_rate">Total heart rate</string>
    <string name="Total_heart_rate_zone">Total heart rate zone</string>
    <string name="Total_pace">Total pace</string>
    <string name="Total_speed">Total speed</string>
    <string name="Total_time">Total time</string>
    <string name="Triggers">Triggers</string>
    <string name="Type">Type</string>
    <string name="Workout">Workout</string>
    <string name="cool_down">cool down</string>
    <string name="cue_distance">cue_distance</string>
    <string name="cue_distance_intervall">cue_distance_intervall</string>
    <string name="cue_end_of_lap">cue_end_of_lap</string>
    <string name="cue_time">cue_time</string>
    <string name="cue_time_intervall">cue_time_intervall</string>
    <string name="cueinfo_current_cad">cueinfo_current_cadence</string>
    <string name="cueinfo_current_hr">cueinfo_current_hr</string>
    <string name="cueinfo_current_hrz">cueinfo_current_hrz</string>
    <string name="cueinfo_current_pace">cueinfo_current_pace</string>
    <string name="cueinfo_current_speed">cueinfo_current_speed</string>
    <string name="cueinfo_lap_distance">cueinfo_lap_distance</string>
    <string name="cueinfo_lap_hr">cueinfo_lap_hr</string>
    <string name="cueinfo_lap_hrz">cueinfo_lap_hrz</string>
    <string name="cueinfo_lap_pace">cueinfo_lap_pace</string>
    <string name="cueinfo_lap_speed">cueinfo_lap_speed</string>
    <string name="cueinfo_lap_time">cueinfo_lap_time</string>
    <string name="cueinfo_skip_startstop">cueinfo_skip_startstop</string>
    <string name="cueinfo_step_distance">cueinfo_step_distance</string>
    <string name="cueinfo_step_hr">cueinfo_step_hr</string>
    <string name="cueinfo_step_hrz">cueinfo_step_hrz</string>
    <string name="cueinfo_step_pace">cueinfo_step_pace</string>
    <string name="cueinfo_step_speed">cueinfo_step_speed</string>
    <string name="cueinfo_step_time">cueinfo_step_time</string>
    <string name="cueinfo_target_coaching">cueinfo_target_coaching</string>
    <string name="cueinfo_total_distance">cueinfo_total_distance</string>
    <string name="cueinfo_total_hr">cueinfo_total_hr</string>
    <string name="cueinfo_total_hrz">cueinfo_total_hrz</string>
    <string name="cueinfo_total_pace">cueinfo_total_pace</string>
    <string name="cueinfo_total_speed">cueinfo_total_speed</string>
    <string name="cueinfo_total_time">cueinfo_total_time</string>
    <string name="cueinfo_units">cueinfo_units</string>
    <string name="distance">distance</string>
    <string name="heart_rate_zone">heart rate zone</string>
    <string name="metrics_heartrate">HR</string>
    <string name="pace">pace</string>
    <string name="pref_audio_lang">pref_audio_lang</string>
    <string name="pref_basic_audio">basicAudio</string>
    <string name="pref_basic_target_hrz">basic_target_hrz</string>
    <string name="pref_basic_target_pace_max">basic_target_pace_max</string>
    <string name="pref_basic_target_type">basicTargetType</string>
    <string name="pref_cue_hrm_connection">pref_cue_hrm_connection</string>
    <string name="pref_hrz_age">hrzAge</string>
    <string name="pref_hrz_mhr">hrzMHR</string>
    <string name="pref_hrz_sex">hrzSex</string>
    <string name="pref_interval_audio">intervalAudio</string>
    <string name="pref_interval_distance">intervalDistance</string>
    <string name="pref_interval_repetitions">intervalRepetitions</string>
    <string name="pref_interval_rest_distance">intervalRestDistance</string>
    <string name="pref_interval_rest_time">intervalRestTime</string>
    <string name="pref_interval_rest_type">intervalRestType</string>
    <string name="pref_interval_time">intervalTime</string>
    <string name="pref_interval_type">intervalType</string>
    <string name="pref_lap_started">pref_lap_started</string>
    <string name="pref_mute_bool">pref_mute_bool</string>
    <string name="time">time</string>
    <string name="warm_up">warm up</string>
</resources>