<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:orientation="vertical" android:id="@id/tab_manual" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_margin="@dimen/activity_margin"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:runnerup="http://schemas.android.com/apk/res-auto">
    <org.runnerup.widget.TitleSpinner android:entries="@array/sportEntries" android:id="@id/manual_sport" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/Sport" android:prompt="@string/Type" android:layout_alignParentLeft="true" android:layout_alignParentTop="true" />
    <org.runnerup.widget.TitleSpinner android:id="@id/manual_date" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/Date" android:prompt="@string/Type" android:layout_below="@id/manual_sport" android:defaultValue="today" runnerup:type="datepicker" />
    <org.runnerup.widget.TitleSpinner android:id="@id/manual_time" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/Start_hour" android:prompt="@string/Type" android:layout_below="@id/manual_date" android:layout_alignParentLeft="true" android:defaultValue="now" runnerup:type="timepicker" />
    <org.runnerup.widget.TitleSpinner android:id="@id/manual_duration" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/Duration" android:prompt="@string/Type" android:layout_below="@id/manual_time" android:layout_alignParentLeft="true" android:defaultValue="00:00:00" runnerup:type="durationpicker" />
    <org.runnerup.widget.TitleSpinner android:id="@id/manual_distance" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/Distance" android:prompt="@string/Type" android:layout_below="@id/manual_duration" android:layout_alignParentLeft="true" android:inputType="numberDecimal" runnerup:type="distancepicker" />
    <org.runnerup.widget.TitleSpinner android:id="@id/manual_pace" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/pace" android:prompt="@string/Type" android:layout_below="@id/manual_distance" android:layout_alignParentLeft="true" android:inputType="numberDecimal" runnerup:type="durationpicker" />
    <EditText android:gravity="start|center|top" android:id="@id/manual_notes" android:layout_width="fill_parent" android:layout_height="wrap_content" android:hint="@string/Add_workout_notes" android:ems="10" android:layout_below="@id/manual_pace" android:layout_alignParentLeft="true" android:layout_alignParentBottom="true" android:inputType="textMultiLine" />
</RelativeLayout>