<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="horizontal" android:paddingTop="8.0dip" android:paddingBottom="8.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <TextView android:id="@id/lap_list_id" android:visibility="gone" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_weight="0.0" />
    <TextView android:textStyle="normal" android:gravity="end" android:id="@id/lap_list_type" android:layout_width="0.0dip" android:layout_height="wrap_content" android:text="" android:layout_weight="0.8" />
    <TextView android:gravity="end" android:id="@id/lap_list_time" android:layout_width="0.0dip" android:layout_height="wrap_content" android:text="@string/time" android:layout_weight="1.0" />
    <TextView android:gravity="end" android:id="@id/lap_list_distance" android:layout_width="0.0dip" android:layout_height="wrap_content" android:text="@string/distance" android:layout_weight="1.0" />
    <TextView android:gravity="end" android:id="@id/lap_list_pace" android:layout_width="0.0dip" android:layout_height="wrap_content" android:text="@string/pace" android:layout_weight="1.0" />
    <TextView android:gravity="end" android:id="@id/lap_list_hr" android:layout_width="0.0dip" android:layout_height="wrap_content" android:text="@string/metrics_heartrate" android:layout_weight="1.0" />
</LinearLayout>