<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:paddingLeft="16.0dip" android:paddingTop="@dimen/dialog_padding_vert" android:paddingRight="16.0dip" android:paddingBottom="@dimen/dialog_padding_vert" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:runnerup="http://schemas.android.com/apk/res-auto">
    <org.runnerup.widget.TitleSpinner android:entries="@array/step_intensity_types" android:id="@id/step_intensity" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/Step_intensity" android:prompt="@string/Type" runnerup:values="@array/step_intensity_values" />
    <org.runnerup.widget.TitleSpinner android:entries="@array/duration_types" android:id="@id/step_duration_type" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/Type" android:prompt="@string/Type" runnerup:values="@array/step_duration_values" />
    <org.runnerup.widget.TitleSpinner android:id="@id/step_duration_distance" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="" android:prompt="@string/Type" android:defaultValue="1000" android:inputType="numberDecimal" runnerup:type="distancepicker" />
    <org.runnerup.widget.TitleSpinner android:id="@id/step_duration_time" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="" android:prompt="@string/Type" android:defaultValue="00:01:00" android:inputType="time" runnerup:type="durationpicker" />
    <org.runnerup.widget.TitleSpinner android:entries="@array/target_types" android:id="@id/step_target_type" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/Target" android:prompt="@string/Type" runnerup:values="@array/target_values" />
    <org.runnerup.widget.TitleSpinner android:id="@id/step_target_pace_lo" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/Low_pace" android:prompt="@string/Type" android:defaultValue="00:05:00" android:inputType="time" runnerup:type="durationpicker" />
    <org.runnerup.widget.TitleSpinner android:id="@id/step_target_pace_hi" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/High_pace" android:prompt="@string/Type" android:defaultValue="00:05:30" android:inputType="time" runnerup:type="durationpicker" />
    <org.runnerup.widget.TitleSpinner android:id="@id/step_target_hrz" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/heart_rate_zone" android:prompt="@string/Type" />
</LinearLayout>